--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "programming-3",
   "version": "1.0.0",
   "description": "",
-  "main": "class.base.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
